--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eleanor Murguia</title> 
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:700,700i" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
-<div>
+<!--HEADER--> 
+<div id="header">
     <h1>Eleanor Murguia is a Software Engineer</h1>
     <div> 
         <div> 
@@ -23,8 +28,10 @@
         </div>
     </div> 
 </div> 
-<div> 
-    <h1> About </h1>
+
+<!--ABOUT SECTION--> 
+<div id="about"> 
+    <h1 class="section-title"> About </h1>
     <div> 
         <div> 
            <p> Eleanor is a junior studying Computer Science at Barnard College of Columbia University. She has experience in iOS, backend and frontend development, and has been a memeber of Barnard's Athena Digital Design Agency since 2015.</p> 
@@ -34,8 +41,10 @@
         </div> 
     </div> 
 </div> 
-<div> 
-    <h1> Skills </h1> 
+
+<!---SKILLS SECTION--> 
+<div id="skills"> 
+    <h1 class="section-title"> Skills </h1> 
     <div>
         <div>
              <h2> Languages </h2> 
@@ -60,8 +69,10 @@
         </div> 
     </div>
 </div> 
-<div> 
-    <h1> Projects </h1> 
+
+<!---PROJECTS SECTION--> 
+<div id="projects"> 
+    <h1 class="section-title"> Projects </h1> 
     <div> 
     	<h2> BroadwayBestie </h2> 
     	</h3> An iOS app that makes it easier to enter online lotteries for Broadway shows.</h3> 
