--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 <!--HEADER--> 
-<div id="header">
+<div class="header">
     <h1>Eleanor Murguia is a Software Engineer</h1>
     <div> 
         <div> 
@@ -30,7 +30,7 @@
 </div> 
 
 <!--ABOUT SECTION--> 
-<div id="about"> 
+<div class="about"> 
     <h1 class="section-title"> About </h1>
     <div> 
         <div> 
@@ -43,7 +43,7 @@
 </div> 
 
 <!---SKILLS SECTION--> 
-<div id="skills"> 
+<div class="skills"> 
     <h1 class="section-title"> Skills </h1> 
     <div>
         <div>
@@ -71,7 +71,7 @@
 </div> 
 
 <!---PROJECTS SECTION--> 
-<div id="projects"> 
+<div class="projects"> 
     <h1 class="section-title"> Projects </h1> 
     <div> 
     	<h2> BroadwayBestie </h2> 
