link and grammar fixes

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                 </div>
                 <div class="col-sm-6 portfolio-item portfolio-text">
-                    <p>  Spent the summer as an intern, then was asked back as a contractor; Produce marketing emails, create and analyze weekly reports, assisted with an ESP migration, troubleshoot HTML, CSS, XSL</p> </br>
+                    <p>  Spent the summer as an intern, then was asked back as a contractor; produced marketing emails, created and analyzed weekly reports, assisted with an ESP migration, troubleshooted HTML, CSS, XSL</p> </br>
                 </div>
             </div>
 
@@ -206,7 +206,7 @@
                      <img class="img-responsive logo" src="img/bwaybestie_logo.png" alt="BwayBestie">    
                 </div>
                 <div class="project-item col-sm-8"> 
-                    <h3> <a href="http:eleanormurguia.me/BwayBestie">BwayBestie </a> </h3> 
+                    <h3> <a href="http://eleanormurguia.me/BwayBestie">BwayBestie </a> </h3> 
                     <p> An iOS app that makes it easier to enter online lotteries for Broadway shows.<p> 
                     <h5> Swift, JavaScript •  <a href="https://github.com/emurguia/BwayBestie"> Github </a></5> 
                 </div> 
