add bwaybestie images

--- a/index.html
+++ b/index.html
@@ -202,17 +202,24 @@
                     <h2>Projects</h2>
                 </div>
             </div>
+            
+            <div class="flex-container">
+                <img class="img-responsive screenshot flex-item" src="img/0.jpg" alt="BwayBestie">
+                <img class="img-responsive screenshot flex-item" src="img/bwaybestie_screenshot_3.png" alt="BwayBestie">
+                 <img class="img-responsive screenshot flex-item" src="img/3.jpg" alt="BwayBestie">
+            </div> 
             <div class="row">
                  <div class="project-item bway-images col-sm-4">
                      <img class="img-responsive logo" src="img/bwaybestie_logo.png" alt="BwayBestie">    
                 </div>
                 <div class="project-item col-sm-8"> 
                     <h3> <a href="http://eleanormurguia.me/BwayBestie">BwayBestie </a> </h3> 
-                    <p> An iOS app that makes it easier to enter online lotteries for Broadway shows.<p> 
+                    <p> An iOS app that makes it easier to enter online lotteries for Broadway shows. Created entirely by me, from sketching user flows to creating the logo in Sketch.<p> 
                     <h5> Swift, JavaScript •  <a href="https://github.com/emurguia/BwayBestie"> Github </a></5> 
                 </div> 
                
             </div>
+
     </div>
     </section>
 
