fix image display issue

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             
             <div class="flex-container">
                 <img class="img-responsive screenshot flex-item" src="img/0.jpg" alt="BwayBestie">
-                <img class="img-responsive screenshot flex-item" src="img/bwaybestie_screenshot_3.png" alt="BwayBestie">
+                <img class="img-responsive screenshot flex-item" src="img/bwaybestie_screenshot_3.PNG" alt="BwayBestie">
                  <img class="img-responsive screenshot flex-item" src="img/3.jpg" alt="BwayBestie">
             </div> 
             <div class="row">
