--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>
             <div class="col-md-4 current-info"> 
                 <h2>Currently</h2>
-                <h3>Teaching Assistant at Athena Digital Design</h3>
+                <h3>Teaching Assistant for COMS 1002</h3>
             </div>
             <div class="col-md-4 current-info"> 
                 <h2>Contact</h2> 
@@ -114,7 +114,7 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <p class="about-text">Hey, I'm Eleanor. I am a junior at Barnard College of Columbia University studying computer science with a focus on applications. I have experience in iOS, frontend, and backend development. I am especially excited about developing web and mobile apps (I have <a href="#projects">my own app</a> on the iTunes store!) and I am passionate about building great products for everyday people. 
+                    <p class="about-text">Hey, I'm Eleanor. I am a senior at Barnard College of Columbia University studying computer science with a focus on applications. I have experience in frontend, fullstack, and iOS development. I am especially excited about developing web and mobile apps (I have <a href="#projects">my own app</a> on the iTunes store!) and I am passionate about building great products for everyday people. 
                     </p>
 
             </div>
@@ -139,6 +139,20 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Experience</h2> </br> 
+                </div>
+            </div>
+
+            <div class = "row experience-row"> 
+                <div class="col-sm-3 portfolio-item">
+                   <img class="img-responsive logo" src="img/grubhub_logo.png" alt="Grubhub">
+                </div>
+
+                <div class="col-sm-3 portfolio-item portfolio-text">
+                    <h3 class="titles"> Software Engineer Intern</h3> 
+                    <p class="titles"> June 2018 - August 2018</p> 
+                </div>
+                <div class="col-sm-6 portfolio-item portfolio-text">
+                    <p> Front end team working on the Grubhub website. Contributed to launch of internal style guide and fixed pattern library inconsistencies on the website. </p> 
                 </div>
             </div>
 
@@ -186,7 +200,7 @@
             <!--download resume-->
              <div class ="row">
                  <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="img/Eleanor_Murguia_Resume_new.pdf" class="btn btn-lg btn-outline">
+                    <a href="img/Eleanor_Murguia_Resume.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> Download Resume
                     </a>
                 </div>
@@ -235,12 +249,12 @@
             <div class="row">
                <div class="col-lg-12 text-center">
                    </br> <h3> Languages </h3> 
-                    <h4> • Java • C/C++ • Swift • Python 
-                        • HTML • CSS • JavaScript •   </br>  </h4> 
+                    <h4> • Java • C • Swift • Python 
+                        • HTML • CSS •  Sass • JavaScript •   </br>  </h4> 
                     <h3> Libraries </h3> 
                     <h4> • Bootstrap • BeautifulSoup • Pandas • </h4> 
                     <h3> Tools </h3> 
-                    <h4>    • DataBricks • WordPress • Git/GitHub • xCode • Sketch •
+                    <h4>    • Jira • WordPress • Git/GitHub • xCode • Sketch •
                     
                     </h4> 
                 </div>
